# ci-figure-generation

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  reclass_all.py  requirements.txt  scrape.py
a16z_charts/: __init__.py  area.py  bar.py  combo.py  line.py  palette.py  pie.py  scatter.py  table.py  theme.py
examples/: README.md  demo_area.py  demo_bar.py  demo_combo.py  demo_line.py  demo_pie.py  demo_scatter.py  demo_table.py  generate_all.py  index.html
examples/a16z-news/: bar.py  diverging_bar.py  gauge.json  gauge.py  sparkline.py
examples/care-indeed/: all.html  area.py  bar.py  diverging_bar.py  gauge.json  gauge.py  generate_all.py  line.py  map.py  pie.py  scatter.py  sparkline.py  table.py
examples/quitemailingyourself/: area.json  area.py  bar.json  bar.py  big_number.json  big_number.py  diverging_bar.json  diverging_bar.py  gauge.json  gauge.py  generate_all.py  line.json  line.py  map.json  map.py  pie.json  pie.py  scatter.json  scatter.py  sparkline_area.json  sparkline_area.py  sparkline_bar.json  sparkline_bar.py  sparkline_line.json  sparkline_line.py  stat_card.json  stat_card.py  table.json  table.py
graphs/: browse.html
scripts/: create_theme.py  rebuild_all.py
scripts/chart_library/: __init__.py
scripts/chart_library.egg-info/: PKG-INFO
scripts/chart_library/charts/: diverging_bar.py  gauge.py  sparkline.py
tests/: test_charts.py
themes/a16z-news/: theme.yaml
themes/care-indeed/: theme.yaml
webapp/: README.md  app.py  requirements.txt
webapp/templates/: index.html
(+5 files in other folders)
