[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chart-library"
version = "0.1.0"
description = "Themeable Plotly chart library"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["plotly", "charts", "visualization", "theme"]
dependencies = [
    "plotly>=5.20",
    "pandas>=1.5",
    "PyYAML>=6.0",
    "kaleido>=0.2",
]

[project.optional-dependencies]
dev = ["Pillow>=10.0"]

[project.urls]
Repository = "https://github.com/marksher/ci-figure-generation"

[tool.setuptools]
package-dir = {"" = "scripts"}

[tool.setuptools.packages.find]
where = ["scripts"]

[tool.setuptools.package-data]
chart_library = ["themes/*.yaml"]
